--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	}
 
 #computer {
-	background-image: url(../res/COMPUTER_back_2.png);
+	background-image: url(res/COMPUTER_back_2.png);
 	background-repeat: no-repeat;
 	height: 730px;
 	width: 765px;
@@ -37,7 +37,7 @@
 	padding-left: 10px;
 	position: relative;
 	z-index: 1;
-	background-image: url(../res/crt_noise_4.gif);
+	background-image: url(res/crt_noise_4.gif);
 }
 
 #contenedor_azul {
@@ -50,7 +50,7 @@
 	padding-left: 10px;
 	position: relative;
 	z-index: 1;
-	background-image: url(../res/crt_noise_4.gif);
+	background-image: url(res/crt_noise_4.gif);
 }
 
 #fondo {
@@ -87,7 +87,7 @@
 	z-index: 2;
 	position: fixed;
 	pointer-events: none;
-	background-image: url(../res/crt.png);
+	background-image: url(res/crt.png);
 }
 
 #crt_escondido {
@@ -104,7 +104,7 @@
 	z-index: 2;
 	position: fixed;
 	pointer-events: none;
-	background-image: url(../res/crt.png);
+	background-image: url(res/crt.png);
 	visibility: hidden;
 }
 	
