--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	}
 
 #computer {
-	background-image: url(res/COMPUTER_back_2.png);
+	background-image: url(res/COMPUTER_BACK_2.png);
 	background-repeat: no-repeat;
 	height: 730px;
 	width: 765px;
